# three-body-ota

./: .env.example  .gitignore  BUGS_AND_CHALLENGES.md  CHANGELOG.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  docker-compose.yml  littlecontext_summary.txt  test_ota.sh
backend-and-dash/: main.py  requirements.txt  test_edge_cases.py  test_security.py
backend-and-dash/firmware_storage/: registry.json
backend-and-dash/streamlit/: app.py
cli-tool/: Cargo.toml  custom-metadata.json
cli-tool/src/: main.rs
firmware/: CMakeLists.txt  PLAN.md  README.md  TESTING.md  TEST_EDGE_CASES.md  TEST_RESULTS.md  partition.csv  report.txt  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  ota_handler.c  ota_handler.h  wifi.c  wifi.h
mosquitto/config/: aclfile  mosquitto.conf  mosquitto_local.conf
tests/: conftest.py  requirements.txt  test_integration_edge_cases.py
